--- a/reactapp/public/index.html
+++ b/reactapp/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,9 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE">
-</script>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY_HERE"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -62,18 +63,24 @@
     (function (l) {
       if (l.search) {
         var q = {};
-        l.search.slice(1).split('&').forEach(function (v) {
-          var a = v.split('=');
-          q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-        });
+        l.search
+          .slice(1)
+          .split("&")
+          .forEach(function (v) {
+            var a = v.split("=");
+            q[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&");
+          });
         if (q.p !== undefined) {
-          window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + (q.p || '') +
-            (q.q ? ('?' + q.q) : '') +
-            l.hash
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) +
+              (q.p || "") +
+              (q.q ? "?" + q.q : "") +
+              l.hash
           );
         }
       }
-    }(window.location))
+    })(window.location);
   </script>
 </html>
