added env variable

--- a/udemy-react-app/index.html
+++ b/udemy-react-app/index.html
@@ -12,5 +12,11 @@
     <div id="drawer-hook"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=<{ VITE_APP_GMAPS_API_KEY }>"
+      async
+      defer
+    ></script>
   </body>
 </html>
